--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,19 @@
       <artifactId>cucumber-java</artifactId>
       <version>7.10.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
+    <dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-junit</artifactId>
+      <version>1.2.5</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>4.7.1</version>
+    </dependency>
+
   </dependencies>
 </project>
